@@ -700,15 +700,6 @@ NONAT           loc             -               tcp     80</programlisting>
       earlier.</para>
     </section>
 
-    <section>
-      <title>/etc/shorewall/providers</title>
-
-      <para>Beginnins with Shorewall 4.4.3, the <option>track</option> option
-      is now the default. If, for some reason, you don't want the
-      <option>track</option> option then specify
-      <option>notrack</option>.</para>
-    </section>
-
     <section id="extension">
       <title>Extension Scripts</title>
 
