@@ -168,6 +168,13 @@
                 is the default. If, for some reason, you don't want
                 <option>track</option> then specify <option>notrack</option>
                 (see below).</para>
+
+                <para>Beginning with Shorewall 4.4.3, <option>track</option>
+                defaults to the setting of the TRACK_PROVIDERS option in
+                <ulink url="shorwewall.conf.html">shorewall.conf</ulink> (5).
+                If you set TRACK_PROVIDERS=Yes and want to override that
+                setting for an individual provider, then specify
+                <option>notrack</option> (see below).</para>
               </listitem>
             </varlistentry>
 
@@ -204,7 +211,7 @@
 
               <listitem>
                 <para>Added in Shorewall 4.4.3. When specified, turns off
-                <option>track</option> which is now the default.</para>
+                <option>track</option>.</para>
               </listitem>
             </varlistentry>
 
