@@ -222,9 +222,9 @@ None.
     On non-Debian systems, new installs will now log all Shorewall 
     commands to /var/log/shorewall-init.log.
 
-2)  Because the 'track' provider option is so useful, it is now the
-    default. If, for some reason, you don't want 'track' then specify
-    'notrack' for the provider.
+2)  A new TRACK_PROVIDERS option has been added in shorewall.conf.
+    The value of this option becomes the default for the 'track'
+    provider option in /etc/shorewall/providers.
 
 ----------------------------------------------------------------------------
                 N E W   F E A T U R E S   I N   4 . 4 . 0
