@@ -18,6 +18,8 @@ Changes in Shorewall 4.4.3
 
 9)  Make 'track' the default.
 
+10)  Add TRACK_PROVIDERS option.
+
 Changes in Shorewall 4.4.2
 
 1)  BUGFIX: Correct detection of Persistent SNAT support
